Use thumbnails as default sidebar page

When the sidebar page set by the document metadata
is not supported, it falls back to thumbnails.

https://bugzilla.gnome.org/show_bug.cgi?id=628617